fix: fix contrast issue with result table (#93)
* fix: fix contrast issue with result table

#517

* fix: add semicolon

#517

--- a/src/src-web/styles/index.scss
+++ b/src/src-web/styles/index.scss
@@ -216,6 +216,7 @@
             &:nth-child(n){
               background-color: transparent;
               border-bottom: 1px solid var(--color-ui-04);
+              color: var(--color-base01);
             }
           }
         }
